Update dependencies and fix formatting issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ openai = "^1.1.1"
 python-dotenv = "^1.0.0"
 seaborn = "^0.13.1"
 chardet = "^5.2.0"
+black = "^24.2.0"
+isort = "^5.13.2"
+flake8 = "^7.0.0"
 
 
 
