--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,3 +38,6 @@ priority = "explicit"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
