--- a/.gitattributes
+++ b/.gitattributes
@@ -14,6 +14,16 @@ models/**/*.joblib filter=lfs diff=lfs merge=lfs -text
 models/**/*.json filter=lfs diff=lfs merge=lfs -text
 models/**/*.txt filter=lfs diff=lfs merge=lfs -text
 
+# Git LFS設定 - datasetsディレクトリ内のファイル
+datasets/**/*.arrow filter=lfs diff=lfs merge=lfs -text
+datasets/**/*.json filter=lfs diff=lfs merge=lfs -text
+datasets/**/*.parquet filter=lfs diff=lfs merge=lfs -text
+datasets/**/*.csv filter=lfs diff=lfs merge=lfs -text
+datasets/**/*.tsv filter=lfs diff=lfs merge=lfs -text
+datasets/**/*.txt filter=lfs diff=lfs merge=lfs -text
+datasets/**/*.pkl filter=lfs diff=lfs merge=lfs -text
+datasets/**/*.pickle filter=lfs diff=lfs merge=lfs -text
+
 # その他の大きなファイル（100MB以上）
 *.bin filter=lfs diff=lfs merge=lfs -text
 *.h5 filter=lfs diff=lfs merge=lfs -text
